[package]
name = "tasc"
version = "0.1.0"
authors = ["chase <clstlaurent@wpi.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"

rand = "0.8.4"
rand_xorshift = "*"
rand_distr = "*"

ndarray= "*"
ndarray-linalg = "*"
ndarray-rand = "*"
ndarray-stats = "*"
